--- a/color.html
+++ b/color.html
@@ -1,16 +1,43 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Color Game</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body class="bg">
-<div style="background:rgba(255,255,255,0.85);padding:20px;border-radius:8px;">
-<h2>Color Game</h2>
-<p>Game placeholder. Implement color game here.</p>
-<button onclick="window.location.href='index.html'">Quit</button>
-</div>
+<html>
+<head><title>Color Match</title></head>
+<body>
+<h2>Color Match</h2>
+<p>Click the color shown below!</p>
+<h3 id="targetColor"></h3>
+<div id="buttons"></div>
+<p id="score">Score: 0</p>
+<p id="timer"></p>
+<script>
+const colors = ["Red", "Blue", "Green", "Yellow", "Purple","Black","pink"];
+let score = 0, time = 45, target;
+
+function setColor() {
+  target = colors[Math.floor(Math.random() * colors.length)];
+  document.getElementById("targetColor").innerText = "Target: " + target;
+  let html = "";
+  colors.sort(() => 0.5 - Math.random()).forEach(color => {
+    html += `<button onclick="check('${color}')">${color}</button>`;
+  });
+  document.getElementById("buttons").innerHTML = html;
+}
+
+function check(color) {
+  if (color === target) score++;
+  document.getElementById("score").innerText = "Score: " + score;
+  setColor();
+}
+
+setColor();
+
+let interval = setInterval(() => {
+  document.getElementById("timer").innerText = "⏳ Time: " + time-- + "s";
+  if (time < 0) {
+    clearInterval(interval);
+    alert("⏱️ Time's up! Your score: " + score);
+  }
+}, 1000);
+</script>
 </body>
 </html>
