--- a/speed.html
+++ b/speed.html
@@ -1,16 +1,41 @@
+
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Speed Typing</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body class="bg">
-<div style="background:rgba(255,255,255,0.85);padding:20px;border-radius:8px;">
-<h2>Speed Typing</h2>
-<p>Game placeholder. Implement speed typing here.</p>
-<button onclick="window.location.href='index.html'">Quit</button>
-</div>
+<html>
+<head><title>Typing Test</title></head>
+<body>
+<h2>Typing Speed Test</h2>
+<p id="sentence"></p>
+<input type="text" id="input" oninput="checkTyping()" />
+<p id="score">Correct: 0</p>
+<p id="timer"></p>
+<script>
+const sentences = ["Hello world", "Practice makes perfect", "JavaScript is fun", "Spin the wheel", "Typing is cool"];
+let score = 0, time = 60, current;
+
+function newSentence() {
+  current = sentences[Math.floor(Math.random() * sentences.length)];
+  document.getElementById("sentence").innerText = current;
+  document.getElementById("input").value = "";
+}
+
+function checkTyping() {
+  if (document.getElementById("input").value === current) {
+    score++;
+    document.getElementById("score").innerText = "Correct: " + score;
+    newSentence();
+  }
+}
+
+newSentence();
+
+let interval = setInterval(() => {
+  document.getElementById("timer").innerText = "⏳ Time: " + time-- + "s";
+  if (time < 0) {
+    clearInterval(interval);
+    alert("⏱️ Time's up! Your score: " + score);
+  }
+}, 1000);
+</script>
 </body>
 </html>
